--- a/index.html
+++ b/index.html
@@ -70,12 +70,39 @@
             <h1>Bonitão Souza</h1>
             <span>@bonitao</span>
             <p>Web, Design & Rock `n roll Partner/UI Designer @bonitao Musician in @turtle</p>
-            <ul>
+            <ul class="list">
                 <li><img src="/images/localizacao.png" alt="Place">Namur, Belgium</li>
                 <li><img src="/images/elo-da-corrente.png" alt="URL"> exibit.be</li>
                 <li><img src="/images/relogio.png" alt="Clock"> Joined June 2007</li>
                 <li><img src="/images/menino-bebe.png" alt="Born"> Born the 20th of June 1978</li>
             </ul>
+
+            <div class="widget followers">
+                <strong><img src="/images/perfil-de-usuario.png" alt="Followers"> 73 followers that you know</strong>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="widget images">
+                <strong><img src="/images/imagem.png" alt="Images"> 266 Photos and videos</strong>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>  
         </aside>
         <section class="timeline"></section>
         <aside class="widgets"></aside>
