--- a/index.html
+++ b/index.html
@@ -104,8 +104,49 @@
                 </ul>
             </div>  
         </aside>
-        <section class="timeline"></section>
-        <aside class="widgets"></aside>
+        <section class="timeline">Time Line</section>
+        <aside class="widgets">
+            <div class="widget follow">
+                <div class="title">
+                    <strong>Who to follow</strong>
+                    <a href="">Refresh</a>
+                    <a href="">View all</a>
+                </div>
+
+                <ul>
+                    <li>
+                        <div class="profile">
+                            <img src="/images/avatar.svg" alt="Avatar">
+                            <div class="info">
+                                <strong>Spade <span>@spade_be</span></strong>
+                                <button>Follow</button>
+                            </div>
+                        </div>
+                        <a href="">X</a>
+                    </li>
+                    <li>
+                        <div class="profile">
+                            <img src="/images/avatar.svg" alt="Avatar">
+                            <div class="info">
+                                <strong>Spade <span>@spade_be</span></strong>
+                                <button>Follow</button>
+                            </div>
+                        </div>
+                        <a href="">X</a>
+                    </li>
+                    <li>
+                        <div class="profile">
+                            <img src="/images/avatar.svg" alt="Avatar">
+                            <div class="info">
+                                <strong>Spade <span>@spade_be</span></strong>
+                                <button>Follow</button>
+                            </div>
+                        </div>
+                        <a href="">X</a>
+                    </li>
+                </ul>
+            </div>
+        </aside>
     </div>
 </body>
 </html>
