--- a/index.html
+++ b/index.html
@@ -104,7 +104,78 @@
                 </ul>
             </div>  
         </aside>
-        <section class="timeline">Time Line</section>
+        <section class="timeline">
+            <nav>
+                <a class="active" href="">Tweets</a>
+                <a href="">Tweets and replies</a>
+                <a href="">Medias</a>
+            </nav>
+
+            <ul class="tweets">
+                <li>
+                    <img src="/images/avatar.svg" alt="Avatar">
+                    <div class="info">
+                        <strong>Benoit Vrins <span>@Exibit</span></strong>
+                        <p>app @itsmeDigitalID desinstallee puis reinstallee, comment faire pour retro</p>
+                        <div class="actions">
+                            <a href=""><img src="/images/message-circle.svg" alt="Comments"> 3</a>
+                            <a href=""><img src="/images/loader.svg" alt="ReTweett"> 4</a>
+                            <a href=""><img src="/images/heart.svg" alt="Like"> 5</a>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <img src="/images/avatar.svg" alt="Avatar">
+                    <div class="info">
+                        <strong>Benoit Vrins <span>@Exibit</span></strong>
+                        <p>app @itsmeDigitalID desinstallee puis reinstallee, comment faire pour retro</p>
+                        <div class="actions">
+                            <a href=""><img src="/images/message-circle.svg" alt="Comments"> 3</a>
+                            <a href=""><img src="/images/loader.svg" alt="ReTweett"> 4</a>
+                            <a href=""><img src="/images/heart.svg" alt="Like"> 5</a>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <img src="/images/avatar.svg" alt="Avatar">
+                    <div class="info">
+                        <strong>Benoit Vrins <span>@Exibit</span></strong>
+                        <p>app @itsmeDigitalID desinstallee puis reinstallee, comment faire pour retro</p>
+                        <div class="actions">
+                            <a href=""><img src="/images/message-circle.svg" alt="Comments"> 3</a>
+                            <a href=""><img src="/images/loader.svg" alt="ReTweett"> 4</a>
+                            <a href=""><img src="/images/heart.svg" alt="Like"> 5</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <img src="/images/avatar.svg" alt="Avatar">
+                    <div class="info">
+                        <strong>Benoit Vrins <span>@Exibit</span></strong>
+                        <p>app @itsmeDigitalID desinstallee puis reinstallee, comment faire pour retro</p>
+                        <div class="actions">
+                            <a href=""><img src="/images/message-circle.svg" alt="Comments"> 3</a>
+                            <a href=""><img src="/images/loader.svg" alt="ReTweett"> 4</a>
+                            <a href=""><img src="/images/heart.svg" alt="Like"> 5</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <img src="/images/avatar.svg" alt="Avatar">
+                    <div class="info">
+                        <strong>Benoit Vrins <span>@Exibit</span></strong>
+                        <p>app @itsmeDigitalID desinstallee puis reinstallee, comment faire pour retro</p>
+                        <div class="actions">
+                            <a href=""><img src="/images/message-circle.svg" alt="Comments"> 3</a>
+                            <a href=""><img src="/images/loader.svg" alt="ReTweett"> 4</a>
+                            <a href=""><img src="/images/heart.svg" alt="Like"> 5</a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </section>
         <aside class="widgets">
             <div class="widget follow">
                 <div class="title">
